--- a/rancid/lib/iosxr.pm.in
+++ b/rancid/lib/iosxr.pm.in
@@ -160,9 +160,11 @@ sub ShowVersion {
 	tr/\015//d;
 	if (/^$prompt/) { $found_version = 1; last};
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(0) if ($found_version);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
 
@@ -401,11 +403,18 @@ sub AdminShowDiag {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(-1) if (/command authorization failed/i);
+
+	# skip blank lines
 	/^$/ && next;
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	s/^NODE //;
 	# wtf are these?
@@ -430,23 +439,30 @@ sub AdminShowRunning {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(-1) if (/command authorization failed/i);
+
+	# skip blank lines
 	/^$/ && next;
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	/^building configuration/i && next;
 	if (/^(\s*secret) / && $filter_pwds >= 2) {
-	    ProcessHistory("SLOT","","","!$1 <removed>\n");
+	    ProcessHistory("ASR","","","!$1 <removed>\n");
 	    next;
 	}
 
-	ProcessHistory("SLOT","","","!$_");
+	ProcessHistory("ASR","","","!$_");
 
 	/^end$/ && last;
     }
-    ProcessHistory("SLOT","","","!\n");
+    ProcessHistory("ASR","","","!\n");
     return(0);
 }
 
@@ -459,11 +475,18 @@ sub ShowHWfpd {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^|syntax error: unknown argument)$/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(-1) if (/command authorization failed/i);
+
+	# skip blank lines
 	/^$/ && next;
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	/^notes:/i && last;
 
@@ -483,9 +506,11 @@ sub ShowRedundancy {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^|syntax error: unknown argument)$/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 
 	if (/^Version information for secondary in slot (\d+):/) {
 	    $slave = " Slave:";
@@ -512,10 +537,12 @@ sub ShowInstallActive {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/^\s*\^\s*$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^|syntax error: unknown argument)$/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(-1) if (/command authorization failed/i);
 
 	ProcessHistory("COMMENTS","keysort","F5","!Image: $_") && next;
@@ -532,11 +559,13 @@ sub ShowEnv {
     while (<$INPUT>) {
 	tr/\015//d;
 	if (/^$prompt/) { $found_env = 1; last};
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
 	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^|syntax error: unknown argument)$/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(0) if ($found_env);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
 
@@ -582,13 +611,14 @@ sub DirSlotN {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
 	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^|syntax error: unknown argument)$/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(1) if (/(No such device|Error Sending Request)/i);
-	return(1) if (/: path doesnot exists/i);	# XRv
+	return(1) if (/: path doesnot exists/i);	# NCS
 	return(1) if (/\%Error: No such file or directory/);
 	return(1) if (/\%Error: No route to host/);
 	return(1) if (/No space information available/);
@@ -634,7 +664,7 @@ sub DirSlotN {
 	if (/.*\((\d+) (k?bytes) free\)/) {
  	    my($tmp) = $1;
  	    my($sz) = $2;
-	    $tmp *= 1024 if ($sz eq "kbytes");	# XRv summarizes in kbytes
+	    $tmp *= 1024 if ($sz eq "kbytes");	# NCS summarizes in kbytes
 	
 	    if ($tmp >= (1024 * 1024 * 1024)) {
 		$tmp = int($tmp / (1024 * 1024 * 1024));
@@ -664,16 +694,21 @@ sub ShowBootVar {
 	tr/ -~\n//cd;
 	last if (/^$prompt/);
 	next if (/\s*$cmd\s*$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/^\s*\^\s*$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(1) if (/Ambiguous command/i);
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
 	return(-1) if (/command authorization failed/i);
 
 	# skip blank lines
 	next if (/^\s*$/);
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	ProcessHistory("COMMENTS", "keysort", "C30", "! $_");
     }
@@ -692,8 +727,10 @@ sub ShowContAll {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	# return(1) if ($type =~ /^(12[40]|7[05])/);
 	return(-1) if (/command authorization failed/i);
 
@@ -753,9 +790,11 @@ sub ShowDebug {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(-1) if (/command authorization failed/i);
 
 	/^No matching debug flags set$/ && next;
@@ -779,16 +818,21 @@ sub ShowInstallSummary {
 	tr/ -~\n//cd;
 	last if (/^$prompt/);
 	next if (/\s*$cmd\s*$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/^\s*\^\s*$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(1) if (/Ambiguous command/i);
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
 	return(-1) if (/command authorization failed/i);
 
 	# skip blank lines
 	next if (/^\s*$/);
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	ProcessHistory("COMMENTS", "keysort", "C15", "! $_");
     }
@@ -809,10 +853,16 @@ sub ShowInventory {
 	return if (/^\s*\^$/);
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(-1) if (/command authorization failed/i);
+
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	# remove spaces after quotes
 	s/\"\s+/\"/g;
@@ -854,16 +904,21 @@ sub ShowLicense {
 	tr/ -~\n//cd;
 	last if (/^$prompt/);
 	next if (/\s*$cmd\s*$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (/^\s*\^\s*$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(1) if (/Ambiguous command/i);
 	return(1) if (/(Open device \S+ failed|Error opening \S+:)/);
 	return(-1) if (/command authorization failed/i);
 
 	# skip blank lines
 	next if (/^\s*$/);
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	ProcessHistory("COMMENTS", "keysort", "C20", "! $_");
     }
@@ -881,10 +936,12 @@ sub ShowRPL {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(1) if (/Ambiguous command/i);
 	return(-1) if (/command authorization failed/i);
 
@@ -903,10 +960,12 @@ sub ShowVLAN {
 	tr/\015//d;
 	last if (/^$prompt/);
 	next if (/^(\s*|\s*$cmd\s*)$/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if /^\s*\^\s*$/;
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(1) if (/Ambiguous command/i);
 	return(-1) if (/command authorization failed/i);
 
@@ -925,10 +984,12 @@ sub WriteTerm {
     while (<$INPUT>) {
 	tr/\015//d;
 	last if (/^$prompt/);
+	# filter the bloody cmd-line timestamp
+	next if (/^\w{3} \w{3,4} {1,3}\d{1,2} {1,2}\d{1,2}:\d+:\d+\.\d+ \S+$/);
 	return(1) if (!$linecnt && /^\s+\^\s*$/);
 	return(1) if (/Line has invalid autocommand /);
 	return(1) if (/(Invalid (input|command) detected|Type help or )/i);
-	return(1) if (/^(-+^$|syntax error: unknown argument)/i);	# XRv
+	return(1) if (/^(-+\^|syntax error: unknown argument)$/i);	# NCS
 	return(1) if (/\%Error: No such file or directory/);
 	return(0) if ($found_end);		# Only do this routine once
 	return(-1) if (/command authorization failed/i);
@@ -941,6 +1002,10 @@ sub WriteTerm {
 	if (!$linecnt && defined($config_register)) {
 	    ProcessHistory("","","", "!\nconfig-register $config_register\n");
 	}
+
+	# NCS junk
+	next if (/^\S+ connected from 127.0.0.1 using console /);
+	next if (/# terminal length 0$/);
 
 	/Non-Volatile memory is in use/ && return(-1); # NvRAM is locked
 	/% Configuration buffer full, / && return(-1); # buffer is in use
