--- a/rancid/bin/hlogin.in
+++ b/rancid/bin/hlogin.in
@@ -424,7 +424,8 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 					  catch {close}; catch {wait};
 					  return 1 }
 		-re "$p_prompt"		{ send -- "$userpswd\r" }
-		"$prompt"		{ set in_proc 0; return 0 }
+		-re "$prompt"		{ set in_proc 0; return 0 }
+		-re "\[^\r\n]*\[\r\n]+"	{ exp_continue; }
 		"Press any key to continue" {
 					  send " "
 					  exp_continue
@@ -448,13 +449,15 @@ proc login { router user userpswd passwd enapasswd cmethod cyphertype identfile 
 				  exp_continue
 				}
 		-re "$e_prompt"	{ send -- "$enapasswd\r" }
-		"$prompt"	{ set in_proc 0;
+		-re "$prompt"	{ set in_proc 0;
 				  return 0
 				}
+		-re "\[^\r\n]*\[\r\n]+"	{ exp_continue; }
 	    }
 	    exp_continue
 	}
-	"$prompt"	{ break; }
+	-re "\[^\r\n]*\[\r\n]+"	{ exp_continue; }
+	-re "$prompt"		{ break; }
 	denied		{ send_user "\nError: Check your passwd for $router\n"
 			  catch {close}; catch {wait}; return 1
 			}
@@ -497,10 +500,16 @@ proc run_commands { prompt command } {
     # Turn off the pager and escape regex meta characters in the $prompt
     send "no page\r"
     # match cisco config mode prompts too, such as router(config-if)#
-    regsub -all {^(.{1,11}).*([#>])$} $prompt {\1} reprompt
+    regsub -all {^(.{1,11}).*([#>] ?)$} $prompt {\1} reprompt
     # escape any parens in the prompt, such as "(enable)"
     regsub -all {[)(]} $reprompt {\\&} reprompt
     append reprompt {([^#>\r\n]+)?[#>](\\([^)\\r\\n]+\\))?}
+    expect {
+	-re $reprompt	{}
+	-re "\[\n\r]+"	{ exp_continue }
+    }
+    # Ciena Waveserver o/s
+    send "system shell session set more off\r"
     expect {
 	-re $reprompt	{}
 	-re "\[\n\r]+"	{ exp_continue }
@@ -605,30 +614,29 @@ foreach router [lrange $argv $i end] {
 	set timeout $timeoutdflt
     }
 
-    # Figure out prompt.
-    # Since autoenable is off by default, if we have it defined, it
-    # was done on the command line. If it is not specifically set on the
-    # command line, check the password file.
-    if $avautoenable {
-	set autoenable 1
-	set enable 0
-	set prompt "#"
-    } else {
-	set ae [find autoenable $router]
-	if { "$ae" == "1" } {
-	    set autoenable 1
-	    set enable 0
-	    set prompt "#"
-	} else {
-	    set autoenable 0
-	    set enable $avenable
-	    set prompt ">"
-	}
+    # Default prompt.
+    set prompt [join [find prompt $router] ""]
+    if { [llength $prompt] == 0 } {
+        set prompt "(>|#) ?"
     }
 
-    # look for noenable option in .cloginrc
-    if { [find noenable $router] == "1" } {
+    # look for autoenable option in .cloginrc & cmd-line
+    set ae [find autoenable $router]
+    if { "$ae" == "1" || $avautoenable } {
+	set autoenable 1
+    } else {
+	set autoenable 0
+    }
+    # look for enable options in .cloginrc & cmd-line
+    if { $avenable == 0 } {
 	set enable 0
+    } else {
+	set ne [find noenable $router]
+	if { "$ne" == "1" || "$autoenable" == "1" } {
+	    set enable 0
+	} else {
+	    set enable 1
+	}
     }
 
     # Figure out passwords
@@ -762,6 +770,9 @@ foreach router [lrange $argv $i end] {
     } elseif { $do_script } {
 	# disable the pager
 	send "no page\r"
+	expect -re $prompt	{}
+	# Ciena Waveserver o/s
+	send "system shell session set more off\r"
 	expect -re $prompt	{}
 	source $sfile
 	catch {close};
