--- a/rancid/bin/srancid.in
+++ b/rancid/bin/srancid.in
@@ -51,6 +51,7 @@
 #
 #	DELL PowerConnect M8024 / M8024-k
 #	DELL PowerConnect M6348
+#	DELL PowerConnect N2048, N4032F and N4064.
 #	DELL PowerConnect 62xx
 #	DELL 34xx (partially; configuration is incomplete)
 #
