--- a/rancid/lib/wavesvros.pm.in
+++ b/rancid/lib/wavesvros.pm.in
@@ -1,6 +1,6 @@
 package wavesvros;
 ##
-## $Id: junos.pm.in 3123 2015-05-28 22:39:32Z heas $
+## $Id$
 ##
 ## @PACKAGE@ @VERSION@
 @copyright@
@@ -32,7 +32,7 @@ sub import {
 # post-open(collection file) initialization
 sub init {
     # add content lines and separators
-    ProcessHistory("","","","#RANCID-CONTENT-TYPE: $devtype\n#\n");
+    ProcessHistory("","","","!RANCID-CONTENT-TYPE: $devtype\n!\n");
 
     0;
 }
@@ -88,7 +88,7 @@ TOP: while (<$INPUT>) {
 		last TOP;
 	    }
 	}
-	if (/>\s*quit/) {
+	if (/>\s*exit/) {
 	    $clean_run=1;
 	    last;
 	}
@@ -107,6 +107,15 @@ sub ShowChassis {
 	last if (/^$prompt/);
 	/no matching entry found/ && return(-1);	# unknown cmd
 
+	# skip fan status
+	if (/CFU FAN STATUS/) {
+	    while (<$INPUT>) {
+		tr/\015//d;
+		return(-1) if (/^$prompt/);
+		last if (/^\s*$/);
+	    }
+	}
+
 	ProcessHistory("","","","! $_");
     }
     return(0);
@@ -123,10 +132,10 @@ sub ShowVersion {
     # skip software state info
     while (<$INPUT>) {
 	tr/\015//d;
-	last if (/^$prompt/);
+	return(0) if (/^$prompt/);
 	/no matching entry found/ && return(-1);	# unknown cmd
 
-	last if (/^$/);
+	last if (/^\s*$/);
     }
 
     while (<$INPUT>) {
@@ -150,6 +159,7 @@ sub WriteTerm {
     ProcessHistory("","","","! $_");
     while (<$INPUT>) {
 	tr/\015//d;
+	last if (/^$prompt/);
 	/no matching entry found/ && return(-1);	# unknown cmd
 
 	next if (/^! created( by)?: /i);
@@ -200,7 +210,6 @@ sub WriteTerm {
 #	}
 	if (/^! END OF CONFIG:/) {
 	    $found_end = 1;
-	    return(0);
 	}
 	ProcessHistory("","","","$_");
     }
